--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
   float: left;
 }
 #maintab{
-  position:absolute;
   width: 86.8%;
   height:max-content;
   background-color: rgb(43, 43, 43);
@@ -52,6 +51,9 @@
   opacity: .6;
 }
 .sp:hover{
+  opacity: 1;
+}
+.active{
   background-image: linear-gradient(to right,rgba(167, 166, 165, 0.39),rgba(167, 166, 165, 0.39),transparent);
   opacity: 1;
 }
@@ -72,12 +74,12 @@
   width: 100%;
   float: left;
   font-family:  sans-serif;
-  color: rgb(255, 255, 255);
+  color: rgb(82, 80, 80);
   margin-top: 20px;
-  opacity: .7;
+  opacity: .6;
 }
 .second:hover{
-  opacity: .8;
+  opacity: 1;
   text-decoration: underline;
 }
 .vname{
