--- a/src/Bottomp.css
+++ b/src/Bottomp.css
@@ -7,7 +7,7 @@
   bottom: 0;
 }
 #plyer{
-  background-color: turquoise;
+  background-color: rgb(32, 59, 95);
   width: 99%;
   height: 90px;
   margin: 15px;
