--- a/src/Maintab.css
+++ b/src/Maintab.css
@@ -2,16 +2,7 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
-.containertwo{
-  float: left;
-  width: 600px;
-  height: 200px;
-  background-color: rgba(167, 167, 167, 0.24);
-  border-radius: 10px;
-  margin: 5px;
-}
 .img{
-  background-color:violet;
   width: 45%;
   height: 50%;
   float: left;
@@ -23,11 +14,26 @@
   float: left;
   color: white;
 }
+#mname{
+  font-size: 25px;
+  margin: 0px;
+  margin-bottom: 10px;
+}
 #discp{
+  width: 100%;
+  float: left;
   color: rgb(139, 139, 139);
   font-size: 14px;
-  margin-left: 15px;
-  padding: 20px;
+}
+#mbtn{
+  color: white;
+  border: 0px;
+  font-size: 16px;
+  width: 35%;
+  background-color:rgb(60, 97, 93);
+  margin-top: 12%;
+  padding: 10px 20px 10px 20px;
+  border-radius: 25px;
 }
 #imgc{
   width: 35%;
@@ -48,7 +54,7 @@
   float: left;
   height: 220px;
   width: 30%;
-  background-color: rgba(167, 167, 167, 0.24);
+  background-color: rgba(46, 46, 46, 0.74);
   border-radius: 10px;
   margin: 15px;
   padding: 10px;
@@ -58,7 +64,7 @@
   float: left;
   width: 65%;
   height: 220px;
-  background-color: rgba(167, 167, 167, 0.24);
+  background-color: rgba(46, 46, 46, 0.74);
   border-radius: 10px;
   margin: 15px;
 }
@@ -67,7 +73,7 @@
   float: left;
   width: 97.5%;
   height:max-content;
-  background-color:rgba(167, 167, 167, 0.24);
+  background-color:rgba(46, 46, 46, 0.74);
   margin: 15px;
   border-radius: 10px;
   padding: 10px;
@@ -76,11 +82,29 @@
   float: left;
   width: 97.5%;
   height:max-content;
-  background-color:rgba(167, 167, 167, 0.24);
+  background-color:rgba(46, 46, 46, 0.74);
   margin: 15px;
   border-radius: 10px;
   padding: 10px;
 } 
+.lastcontainer{
+  text-align: center;
+  float: left;
+  width: 97.5%;
+  height:max-content;
+  background-color:transparent;
+  border-radius: 10px;
+  margin-bottom: 100px;
+}
+#rb{
+  color: white;
+  width: 10%;
+  font-size: 16px;
+  border: 0px;
+  padding: 10px;
+  border-radius: 40px;
+  background-color: rgb(168, 66, 66);
+}
 .slides1{display: block;
  padding-left: 15px;
 }
@@ -91,7 +115,7 @@
   float: left;
   height:max-content;
   width: 14.8%;
-  background-color:teal;
+  background-color: transparent;
   border-radius: 10px;
   margin: 6px;
 }
@@ -102,16 +126,16 @@
   background-color: rgb(11, 58, 53);
  }
  .songd{
-   font-size: 12px;
-   color: rgb(0, 0, 0);
-   padding: 5px;
+   font-size: 14px;
+   color: rgba(143, 143, 143, 0.808);
+   padding-top: 5px;
    margin: 5px;
  }
 .subcontainer2{
   float: left;
   height:max-content;
   width: 14.8%;
-  background-color:rgb(188, 206, 24);
+  background-color: transparent;
   border-radius: 10px;
   margin: 6px;
 }
@@ -165,24 +189,23 @@
   padding: 2px;
 }
 .tablecontent:hover{
-  background-color: rgb(38, 41, 41);
+  background-color: rgba(63, 63, 63, 0.747);
 }
  .timage{
   float:left;
-  background-color: violet;
    height: 70px; 
    width: 19%;
   border-radius: 10px;
-  margin: 2px;
+  margin: 10px;
 }
 .tabd{
-  color: thistle;
+  color: rgb(255, 255, 255);
   float: left;
   background-color: transparent;
   width: 70%;
   height: 95%;
+  margin-top: 10px;
   padding: 10px;
-  margin-top: 5px;
   border-radius: 10px;
 }
 h2{
@@ -193,16 +216,21 @@ h2{
   padding-left: 20px;
 }
 #demo{
+  color: white;
   margin-top: 0px;
   font-size: 40px;
   margin-bottom: 5px;
 }
-.micon{
-  width: 20px;
-  height: 20px;
-  background-color: transparent;
-  margin-right: 5px;
+.sngname{
+  margin: 0px;
 }
+.sn{
+  font-size: 14px;
+  color: rgba(143, 143, 143, 0.808);
+  margin: 0px;
+  opacity: .6;
+}
+
 @media only screen and (max-width: 600px){
   h2{
     font-size: 14px;
