--- a/src/Maintab.css
+++ b/src/Maintab.css
@@ -50,6 +50,7 @@
   padding: 10px;
 }
 .containera{
+  text-align: center;
   color:white;
   float: left;
   height: 220px;
@@ -59,6 +60,17 @@
   margin: 15px;
   padding: 10px;
   right: 0;
+}
+.imgs{
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  opacity: .6;
+}
+.img2{
+  height: 150px;
+  width: 150px;
+  border-radius: 10px;
 }
 .containertwo{
   float: left;
@@ -217,9 +229,9 @@ h2{
 }
 #demo{
   color: white;
-  margin-top: 0px;
-  font-size: 40px;
+  font-size: 46px;
   margin-bottom: 5px;
+  margin-left: 20px;
 }
 .sngname{
   margin: 0px;
